--- a/IQuiz/Base.lproj/Main.storyboard
+++ b/IQuiz/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="88"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="B9T-QN-sbF" id="xDY-JH-e5l">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="87"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="87.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subject" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zEL-Y5-oXs">
@@ -80,6 +80,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Frt-dg-2QW">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                     <connections>
                         <segue destination="5oD-vC-J8z" kind="show" identifier="QuestionVC" id="enO-EO-Q9f"/>
                     </connections>
@@ -407,7 +410,7 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Score Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgq-mR-eCo">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgq-mR-eCo">
                                 <rect key="frame" x="16" y="125" width="288" height="175"/>
                                 <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="30"/>
                                 <nil key="textColor"/>
@@ -426,7 +429,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Yda-ea-0at" firstAttribute="centerX" secondItem="7F6-pP-z6Y" secondAttribute="centerX" id="0KG-VR-Lys"/>
-                            <constraint firstItem="sgq-mR-eCo" firstAttribute="top" secondItem="m2T-RE-m15" secondAttribute="bottom" constant="8" symbolic="YES" id="9Uv-Eq-wMM"/>
+                            <constraint firstItem="sgq-mR-eCo" firstAttribute="top" secondItem="m2T-RE-m15" secondAttribute="bottom" constant="-36" id="9Uv-Eq-wMM"/>
                             <constraint firstItem="PN7-Wb-j6E" firstAttribute="top" secondItem="7F6-pP-z6Y" secondAttribute="bottom" constant="8" id="AWl-5d-eIe"/>
                             <constraint firstItem="m2T-RE-m15" firstAttribute="top" secondItem="tVM-38-myS" secondAttribute="bottom" constant="52" id="FS1-G5-G6T"/>
                             <constraint firstItem="Yda-ea-0at" firstAttribute="top" secondItem="sgq-mR-eCo" secondAttribute="bottom" constant="8" symbolic="YES" id="Q1A-x0-Cnj"/>
