--- a/IQuiz/Base.lproj/Main.storyboard
+++ b/IQuiz/Base.lproj/Main.storyboard
@@ -129,11 +129,9 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCa-qd-f18">
-                                <rect key="frame" x="16" y="335" width="45" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="45" id="dxw-Lx-BIO"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCa-qd-f18">
+                                <rect key="frame" x="16" y="335" width="161" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="A">
                                     <color key="titleColor" red="0.26404436535295905" green="0.98204191596340396" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -141,8 +139,9 @@
                                     <action selector="answerButton:" destination="5oD-vC-J8z" eventType="touchUpInside" id="4Nv-qc-Twr"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B3g-MZ-XiE">
-                                <rect key="frame" x="16" y="377" width="45" height="34"/>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B3g-MZ-XiE">
+                                <rect key="frame" x="16" y="377" width="161" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="B">
                                     <color key="titleColor" red="0.26404436539999998" green="0.98204191600000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -150,8 +149,9 @@
                                     <action selector="answerButton:" destination="5oD-vC-J8z" eventType="touchUpInside" id="m9u-4w-h9B"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2x-a3-Gp5">
-                                <rect key="frame" x="16" y="419" width="45" height="34"/>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2x-a3-Gp5">
+                                <rect key="frame" x="16" y="419" width="161" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="C">
                                     <color key="titleColor" red="0.26404436539999998" green="0.98204191600000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -159,8 +159,9 @@
                                     <action selector="answerButton:" destination="5oD-vC-J8z" eventType="touchUpInside" id="xJY-Rj-z1o"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gh2-HC-Cso">
-                                <rect key="frame" x="16" y="461" width="45" height="34"/>
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gh2-HC-Cso">
+                                <rect key="frame" x="16" y="461" width="161" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="D">
                                     <color key="titleColor" red="0.26404436539999998" green="0.98204191600000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -168,26 +169,30 @@
                                     <action selector="answerButton:" destination="5oD-vC-J8z" eventType="touchUpInside" id="HRm-g1-Tnv"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dr7-6H-zAM">
-                                <rect key="frame" x="69" y="335" width="235" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dr7-6H-zAM">
+                                <rect key="frame" x="185" y="335" width="119" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCc-fH-fJY">
-                                <rect key="frame" x="69" y="377" width="235" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCc-fH-fJY">
+                                <rect key="frame" x="185" y="377" width="119" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KtN-jg-tvV">
-                                <rect key="frame" x="69" y="419" width="235" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KtN-jg-tvV">
+                                <rect key="frame" x="185" y="419" width="119" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6Z-m6-zt8">
-                                <rect key="frame" x="69" y="461" width="235" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6Z-m6-zt8">
+                                <rect key="frame" x="185" y="461" width="119" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -210,43 +215,16 @@
                             <constraint firstItem="ZVK-ba-Rou" firstAttribute="bottom" secondItem="e1d-Dh-ROc" secondAttribute="top" id="1ev-zu-j6J"/>
                             <constraint firstItem="ZVK-ba-Rou" firstAttribute="centerX" secondItem="Pgj-ID-qoS" secondAttribute="centerX" id="2qs-zR-Fws"/>
                             <constraint firstItem="Pgj-ID-qoS" firstAttribute="leading" secondItem="CzS-Ev-1tq" secondAttribute="leadingMargin" id="6Vd-FZ-BSp"/>
-                            <constraint firstItem="gh2-HC-Cso" firstAttribute="top" secondItem="A2x-a3-Gp5" secondAttribute="bottom" constant="8" symbolic="YES" id="6ph-U2-iYl"/>
-                            <constraint firstItem="A2x-a3-Gp5" firstAttribute="top" secondItem="B3g-MZ-XiE" secondAttribute="bottom" constant="8" symbolic="YES" id="8HO-Bv-oes"/>
                             <constraint firstItem="10K-DI-4qn" firstAttribute="centerX" secondItem="CzS-Ev-1tq" secondAttribute="centerX" id="8Of-X6-98f"/>
-                            <constraint firstItem="dr7-6H-zAM" firstAttribute="leading" secondItem="CCa-qd-f18" secondAttribute="trailing" constant="8" symbolic="YES" id="8hC-5c-bnK"/>
-                            <constraint firstItem="CCc-fH-fJY" firstAttribute="leading" secondItem="B3g-MZ-XiE" secondAttribute="trailing" constant="8" symbolic="YES" id="8za-Fw-Azc"/>
-                            <constraint firstItem="CCc-fH-fJY" firstAttribute="top" secondItem="dr7-6H-zAM" secondAttribute="bottom" constant="8" symbolic="YES" id="AdI-95-FLr"/>
-                            <constraint firstItem="KtN-jg-tvV" firstAttribute="leading" secondItem="Y6Z-m6-zt8" secondAttribute="leading" id="AhY-wl-XYx"/>
-                            <constraint firstItem="dr7-6H-zAM" firstAttribute="trailing" secondItem="CCc-fH-fJY" secondAttribute="trailing" id="DH2-Fy-VWJ"/>
-                            <constraint firstItem="A2x-a3-Gp5" firstAttribute="leading" secondItem="gh2-HC-Cso" secondAttribute="leading" id="Gbv-b1-aBY"/>
-                            <constraint firstItem="gh2-HC-Cso" firstAttribute="top" secondItem="Y6Z-m6-zt8" secondAttribute="top" id="MOy-41-ZsH"/>
                             <constraint firstItem="Pgj-ID-qoS" firstAttribute="top" secondItem="10K-DI-4qn" secondAttribute="bottom" constant="8" symbolic="YES" id="MnD-Av-UDZ">
                                 <variation key="heightClass=compact-widthClass=compact" constant="-10"/>
                             </constraint>
-                            <constraint firstItem="dr7-6H-zAM" firstAttribute="leading" secondItem="CCc-fH-fJY" secondAttribute="leading" id="NA7-Ck-WPX"/>
                             <constraint firstItem="10K-DI-4qn" firstAttribute="top" secondItem="NWN-UY-ntm" secondAttribute="bottom" constant="8" id="O4Q-ES-2JT"/>
-                            <constraint firstItem="B3g-MZ-XiE" firstAttribute="top" secondItem="CCa-qd-f18" secondAttribute="bottom" constant="8" symbolic="YES" id="P6s-Ag-MPH"/>
-                            <constraint firstItem="Y6Z-m6-zt8" firstAttribute="top" secondItem="KtN-jg-tvV" secondAttribute="bottom" constant="8" symbolic="YES" id="PFW-bh-miZ"/>
-                            <constraint firstItem="CCa-qd-f18" firstAttribute="leading" secondItem="B3g-MZ-XiE" secondAttribute="leading" id="PrE-nq-Nsq"/>
-                            <constraint firstItem="CCa-qd-f18" firstAttribute="leading" secondItem="Pgj-ID-qoS" secondAttribute="leading" id="RTG-7N-HKB"/>
-                            <constraint firstItem="CCc-fH-fJY" firstAttribute="trailing" secondItem="KtN-jg-tvV" secondAttribute="trailing" id="U4N-d1-fiI"/>
-                            <constraint firstItem="B3g-MZ-XiE" firstAttribute="leading" secondItem="A2x-a3-Gp5" secondAttribute="leading" id="UCu-iO-ahR"/>
-                            <constraint firstItem="CCc-fH-fJY" firstAttribute="leading" secondItem="KtN-jg-tvV" secondAttribute="leading" id="cFv-kY-Khp"/>
-                            <constraint firstItem="A2x-a3-Gp5" firstAttribute="top" secondItem="KtN-jg-tvV" secondAttribute="top" id="cWx-wi-tXh"/>
-                            <constraint firstItem="CCa-qd-f18" firstAttribute="top" secondItem="Pgj-ID-qoS" secondAttribute="bottom" constant="35" id="eok-qV-Vfh"/>
-                            <constraint firstItem="gh2-HC-Cso" firstAttribute="bottom" secondItem="Y6Z-m6-zt8" secondAttribute="bottom" id="fc1-QV-fdm"/>
                             <constraint firstItem="Pgj-ID-qoS" firstAttribute="leading" secondItem="10K-DI-4qn" secondAttribute="leading" id="gU8-me-Mug"/>
-                            <constraint firstItem="KtN-jg-tvV" firstAttribute="leading" secondItem="A2x-a3-Gp5" secondAttribute="trailing" constant="8" symbolic="YES" id="glM-zO-Rdu"/>
-                            <constraint firstItem="dr7-6H-zAM" firstAttribute="trailing" secondItem="Pgj-ID-qoS" secondAttribute="trailing" id="hOV-6D-OP0"/>
-                            <constraint firstItem="CCa-qd-f18" firstAttribute="top" secondItem="dr7-6H-zAM" secondAttribute="top" id="hX2-uC-x5C"/>
-                            <constraint firstItem="Y6Z-m6-zt8" firstAttribute="leading" secondItem="gh2-HC-Cso" secondAttribute="trailing" constant="8" symbolic="YES" id="p52-5r-Z9T"/>
-                            <constraint firstItem="B3g-MZ-XiE" firstAttribute="top" secondItem="CCc-fH-fJY" secondAttribute="top" id="pl4-ai-Qj0"/>
-                            <constraint firstItem="KtN-jg-tvV" firstAttribute="top" secondItem="CCc-fH-fJY" secondAttribute="bottom" constant="8" symbolic="YES" id="qZR-Yc-gCR"/>
                             <constraint firstItem="ZVK-ba-Rou" firstAttribute="leading" secondItem="CzS-Ev-1tq" secondAttribute="leading" id="qgb-Od-gos"/>
                             <constraint firstItem="Pgj-ID-qoS" firstAttribute="trailing" secondItem="10K-DI-4qn" secondAttribute="trailing" id="tH0-g7-XWu">
                                 <variation key="heightClass=compact-widthClass=compact" constant="-33"/>
                             </constraint>
-                            <constraint firstItem="KtN-jg-tvV" firstAttribute="trailing" secondItem="Y6Z-m6-zt8" secondAttribute="trailing" id="wmi-4v-Ysq"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="tVV-iE-O6I" appends="YES" id="4Vn-d3-itq"/>
